[metadata]
name = QSmooth
version = 1.0.0
author = Dominika Ďurovčíková
author_email = dominika.durovcikova@gmail.com
description = QSmooth is a smoothing algorithm for quasar spectra
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/DominikaDu/QSmooth
project_urls =
    Bug Tracker = https://github.com/DominikaDu/QSmooth/issues
license = BSD-3-Clause

[options]
packages = find:
python_requires = >=3.10
install_requires =
    matplotlib
    numpy
    pandas
    astropy
    scikit-learn
    scipy
    csaps


requirement_files =
    requirements.txt